# itaca_legal

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
data/: categorias_subcategorias.csv
reac_agent/: main.py  nodes.py  react.py  requirements.txt  state.py  tools.py
