[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Javier <7.matute@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
langchain = "0.3.19"
langgraph = "0.2.74"
langchain-community = "^0.3.18"
streamlit = "^1.42.2"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
